--- a/create-mobile.html
+++ b/create-mobile.html
@@ -916,7 +916,7 @@
         </div>
 
         <div class="ts-actions">
-            <button class="ts-act-btn" id="ts-swap-btn" onclick="editCurrentSpriteAction()" style="display:none;">🔄 Swap</button>
+            <button class="ts-act-btn" id="ts-swap-btn" onclick="editCurrentSpriteAction()" style="display:none;">🔄 Actions</button>
             <button class="ts-act-btn" onclick="flipHorizontal()">↔ Flip</button>
             <button class="ts-act-btn" onclick="resetTransform()">↺ Reset</button>
             <button class="ts-act-btn danger" onclick="deleteLayer()">🗑 Del</button>
